<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">beg</string>
    <string name="name_textfield_hinttext">YourName</string>
    <string name="password_textfield_hinttext">Password</string>
    <string name="login_buttontxt">Login</string>
    <string name="login_textfield_errortext">Username or password not valid</string>
    <string name="login_textview_titletext">Login</string>
    <string name="createaccount">Create Account</string>
    <string name="login_name_emptyerror">Name cannot be empty</string>
    <string name="login_password_error">Password cannot be empty</string>
    <string name="login_name_shorterror">Password is short must have 5 character minum</string>
    <string name="account_textview_titletext">Create Account</string>
    <string name="confirmpassword_textfield_hinttext">Confirm Password</string>
    <string name="email_textfield_hinttext">Your Email</string>
    <string name="account_email_emptyerror">Insert a valid mail</string>
    <string name="account_email_formaterror">Email must be like this name@provider.com</string>
    <string name="account_confirmpassword_error">Password and confirm password must be th same</string>
    <string name="welcome_textview_titletext">Welcome!</string>
    <string name="welcome_textview_description">You can add a photo to your profile chosing it into your gallary!!
    </string>
    <string name="welcome_button_addphoto">Add a Photo</string>
    <string name="map_picker_title">Chose your state</string>
    <string name="welcome_button_gotomap">Go To Map</string>
    <string name="photo_button_gotomap">Go To Map Page</string>
    <string name="login_failure">There was an error with the login retry!</string>
    <string name="login_error">Username or password are not correct</string>
    <string name="createaccount_failure">createAccountFailure</string>
    <string name="createaccount_error">CreateAccountError</string>
    <string name="createaccount_textfield_errortext">CreateAccountError</string>
    <string name="chat_send_button">Send</string>
    <string name="progress_dialog_text">Loading...</string>
    <string name="progressbar_text">Loading ...</string>
</resources>
