<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:textSize="35dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome_textview_titletext"
            android:id="@+id/welcome_textview_title"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:autoText="false"
            android:gravity="center"/>

    <TextView
            android:textSize="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_textview_description"
            android:id="@+id/welcome_textview_description"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:autoText="false"
            android:gravity="center"/>
    <ImageView
            android:layout_marginTop="15dp"
            android:layout_width="250dp"
            android:layout_height="270dp"
            android:id="@+id/imageView"
            android:layout_gravity="center"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_button_addphoto"
            android:layout_marginRight="45dp"
            android:layout_marginLeft="45dp"
            android:id="@+id/button" android:layout_gravity="center_horizontal"/>


</LinearLayout>